<?xml version="1.0" encoding="utf-8"?><!--
  ~ Created by Muhamad Syafii
  ~ Sunday, 19/2/2023
  ~ Test Technical Assessment
  ~ Copyright (c) 2023.
  ~ All Rights Reserved
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/label_image_not_found"
        android:src="@drawable/ic_empty" />

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/label_data_not_found" />

    <Button
        android:id="@+id/btn_reload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_retry" />
</LinearLayout>
