<?xml version="1.0" encoding="utf-8"?><!--
  ~ Created by Muhamad Syafii
  ~ Sunday, 19/2/2023
  ~ Test Technical Assessment
  ~ Copyright (c) 2023.
  ~ All Rights Reserved
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_review"
        style="@style/TextAppearance.AppCompat.Body2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/label_reviews"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_all_review"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingVertical="4dp"
        android:text="@string/label_all_review"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_review"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_review" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_review"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/tv_review"
        tools:ignore="RtlSymmetry"
        tools:itemCount="10"
        tools:listitem="@layout/item_detail_review" />

    <TextView
        android:id="@+id/tv_empty"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:textSize="12sp"
        android:gravity="center"
        android:text="@string/label_data_not_found"
        app:layout_constraintTop_toBottomOf="@id/tv_review" />


</androidx.constraintlayout.widget.ConstraintLayout>
